<resources>
    <string name="app_name">MSRC</string>
    <string name="CenturyGothicRegular_font">CenturyGothicRegular</string>
    <string name="CenturyGothicBold_font">CenturyGothicBold</string>
    <string name="CenturyGothicRegular_font_family">ttf</string>
    <string name="OPERATOR_CODE">http://msodata.digitalrupay.com/webservices/operator_info.php?op_code=</string>
    <string name="EMPLOYEE_LOGIN">http://devtest.digitalrupay.com/webservices/emp_login.php?</string>
    <string name="EMPLOYEE_INVENTORY">http://devtest.digitalrupay.com/webservices/emp_inventory.php?emp_id=</string>
    <string name="COMPLAINTS_LIST">http://devtest.digitalrupay.com/webservices/complaints_details.php?emp_id=</string>
    <string name="COMPLAINTS_CATEGORY_LIST">http://devtest.digitalrupay.com/webservices/get_comp_cat.php</string>
    <string name="COMPLAINT_EDIT">http://devtest.digitalrupay.com/webservices/complaints_edit.php?</string>
    <string name="INDENT_RASING">http://devtest.digitalrupay.com/webservices/indent_raising.php?</string>
    <string name="Inventory_Items">http://devtest.digitalrupay.com/webservices/inventory_items.php</string>
    <string name="admin_inventory">http://devtest.digitalrupay.com/webservices/admin_inventory.php?emp_id=</string>
    <string name="admin_inventory_edit">http://devtest.digitalrupay.com/webservices/admin_inventory_edit.php?</string>
    <string name="search">Search</string>
    <string name="login">Login</string>
    <string name="update">Update</string>
    <string name="Welcome_To">Welcome To</string>
    <string name="complaints">Complaints</string>
    <string name="inventory">Inventory</string>
    <string name="newinventory">New Inventory Raising</string>
    <string name="inventorylist">Inventory  List</string>
    <string name="indent">Indent  Raising</string>
    <string name="requiredinventory">Required Inventory Qty.</string>
    <string name="title_activity_indent_raising">IndentRaisingActivity</string>
    <string name="required_On">Required On</string>
    <string name="remarks">Remarks</string>
    <string name="submit">SUBMIT</string>
    <string name="complaints_definition">Description</string>
    <string name="used_inventory">Inventory Used ?</string>
    <string name="Capture_Image">Capture Image</string>
    <string name="redirect_to_dashboard">Redirect To Dashboard</string>
    <string name="Edit_Indent_Details">Edit Indent Details</string>
    <string-array name="PendingComplaintsList">
        <item>Pending</item>
        <item>Processing</item>
        <item>Completed</item>
    </string-array>
    <string-array name="SelectStatusarray">
        <item>Approved</item>
        <item>Rejected</item>
    </string-array>
    <string-array name="Stockarray">
        <item>Shipped</item>
    </string-array>
    <string name="btnTakePicture">Capture Image</string>
    <string name="btnRecordVideo">Record Video</string>
    <string name="or">(or)</string>
    <string name="btnUploadToServer">Upload to Server</string>
</resources>
