<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_emphome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="60dp">
        <com.digitalrupay.msrc.customviews.CustomTextView
            style="@style/CenturyGothic_regular_font"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/in_empname"
            android:textSize="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="35dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/green"/>
        <com.digitalrupay.msrc.customviews.CustomTextView
            style="@style/CenturyGothic_regular_font"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newinventory"
            android:textSize="25dp"
            android:layout_gravity="center_horizontal"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:gravity="center_horizontal">
            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/inventory_item"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_margin="5dp">
            <com.digitalrupay.msrc.customviews.CustomTextView
                style="@style/CenturyGothic_regular_font"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/requiredinventory"
                android:textSize="18dp"
                android:layout_margin="5dp"/>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_Quality"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp">
                    <EditText
                        android:id="@+id/Quality"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:hint="Qty"
                        android:textColor="@color/green"
                        android:inputType="number"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <RelativeLayout
                android:id="@+id/lay_date_calendar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:onClick="openDateCalendar">
                <com.digitalrupay.msrc.customviews.CustomTextView
                    style="@style/CenturyGothic_regular_font"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/required_On"
                    android:textSize="18dp"
                    android:layout_alignParentLeft="true"
                    android:layout_margin="5dp"/>
                <com.digitalrupay.msrc.customviews.CustomTextView
                    android:id="@+id/selectdate"
                    style="@style/CenturyGothic_regular_font"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="adaafafaf"
                    android:textSize="18dp"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="5dp"
                    android:textColor="@color/green"/>
                <ImageView
                    android:id="@+id/ic_calender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:src="@android:drawable/ic_menu_my_calendar"/>
            </RelativeLayout>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:id="@+id/inventory_complaint"/>
            <LinearLayout
                android:id="@+id/lay_remarks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal"
                android:gravity="center">
                <com.digitalrupay.msrc.customviews.CustomTextView
                    style="@style/CenturyGothic_regular_font"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remarks"
                    android:textSize="18dp"/>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_remarks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp">
                <EditText
                    android:id="@+id/remarks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:hint="Enter Remarks....."
                    android:textColor="@color/green"/>
            </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <Button
                android:id="@+id/tvPaymentName"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="19sp"
                android:layout_margin="10dp"
                android:theme="@style/AppTheme.Button"
                android:onClick="submit"/>
        </LinearLayout>
        </ScrollView>
    </LinearLayout>
    <include layout="@layout/sign_out" />
</FrameLayout>
