<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_update_complaint"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="100dp">
    <LinearLayout
        android:id="@+id/titel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.digitalrupay.msrc.customviews.CustomTextView
            style="@style/CenturyGothic_regular_font"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Update Complaint"
            android:textSize="20dp"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:textStyle="bold"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="5dp">
        <com.digitalrupay.msrc.customviews.CustomTextView
            style="@style/CenturyGothic_regular_font"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/in_empname"
            android:textSize="16dp"
            android:textColor="@color/green"/>
        </LinearLayout>
        <com.digitalrupay.msrc.customviews.CustomTextView
            style="@style/CenturyGothic_regular_font"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:layout_margin="10dp"
            android:text="Poor Signal"
            android:id="@+id/complaint_stats"
            android:textColor="@color/green"/>
        <LinearLayout
            android:id="@+id/Add_complaints_definition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:gravity="center">
            <com.digitalrupay.msrc.customviews.CustomTextView
                style="@style/CenturyGothic_regular_font"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/complaints_definition"/>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">
                <EditText
                    android:id="@+id/Add_complaints"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Enter Complaints Description .."
                    android:imeOptions="actionNext"
                    android:textColor="@color/green"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <Spinner
            android:id="@+id/sp_pending_complaints"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" />
        <LinearLayout
            android:id="@+id/section_inventory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">
                <com.digitalrupay.msrc.customviews.CustomTextView
                    style="@style/CenturyGothic_regular_font"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:text="@string/used_inventory"/>
                <CheckBox
                    android:id="@+id/check_used_inventory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <RelativeLayout
                android:id="@+id/sub_section_inventory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <Spinner
                android:id="@+id/select_inventory"
                android:layout_width="180dp"
                android:layout_height="match_parent"/>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp">
                    <EditText
                        android:id="@+id/used_qty"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Used Qty"
                        android:imeOptions="actionNext"
                        android:textColor="@color/green"
                        android:inputType="number"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@android:drawable/ic_menu_add"/>
            </RelativeLayout>
            <RelativeLayout
                android:onClick="captureImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">
            <com.digitalrupay.msrc.customviews.CustomTextView
                style="@style/CenturyGothic_regular_font"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/Capture_Image"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:src="@android:drawable/ic_menu_report_image"/>
            </RelativeLayout>
            <ImageView
                android:id="@+id/Imageprev"
                android:layout_width="150dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:visibility="gone"/>

        </LinearLayout>
    </LinearLayout>
        <Button
            android:id="@+id/tvPaymentName"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="19sp"
            android:layout_marginTop="10dp"
            android:theme="@style/AppTheme.Button"
            android:layout_below="@id/titel"
            android:layout_centerHorizontal="true"
            android:onClick="submit"/>
    </RelativeLayout>
    </ScrollView>
<include layout="@layout/sign_out"/>
</FrameLayout>
